--- a/SampleListView/app/build.gradle
+++ b/SampleListView/app/build.gradle
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-alpha2'
     compile project(':Volley')
-    compile files('libs/universal-image-loader-1.9.5.jar')
     compile files('libs/gson-2.2.4.jar')
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
